# shlif-web

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/app/: __init__.py  runtime.py
backend/app/api/: analyze.py  health.py  jobs.py  masks.py  report.py  tiles.py
backend/app/config/: default.yaml
backend/app/core/: paths.py  settings.py
backend/app/jobs/: runner.py  store.py
backend/app/pipeline/: closeup.py  detect.py  loader.py  masks.py  panorama.py  report.py  tiles.py
backend/app/schemas/: jobs.py
backend/app/shlif/: VENDORED.md  __init__.py  analyze.py  classify.py  config.py  features.py  imageio.py  metrics.py  ore_unet.py  overlay.py  phases.py  preprocess.py  segment.py  talc.py  talc_detector.py  talc_unet.py  tiling.py  uncertainty.py
backend/scripts/: retrain_classifier.py
backend/tests/: conftest.py  test_api.py  test_api_uncertainty.py  test_batch_api.py  test_closeup_progress.py  test_closeup_uncertainty.py  test_dark_gray_phase.py  test_detect_mode.py  test_health.py  test_job_batch.py  test_jobs.py  test_loader.py  test_masks.py  test_masks_api_upscale.py  test_ore_unet.py  test_panorama.py  test_panorama_aggregate.py  test_panorama_assemble.py  test_panorama_progress.py  test_panorama_tiles.py  test_panorama_uncertainty.py  test_panorama_unet_gate.py  test_pipeline.py  test_report.py  test_resolve_threshold.py  test_runtime.py  test_segment.py  test_talc_annotation.py  test_talc_share_metric.py  test_talc_unet.py  test_tile_core_bounds.py  test_tiles_api.py  test_tiling_count.py  test_tiling_feather.py  test_uncertainty.py
docs/superpowers/plans/: 2026-07-04-analysis-progress-ui.md  2026-07-04-mask-editor-sidebar.md  2026-07-04-panorama-closeup-unification.md  2026-07-04-panorama-deep-zoom.md  2026-07-04-panorama-inference-perf.md  2026-07-04-panorama-phase-confidence.md  2026-07-04-report-classification-overlay.md  2026-07-04-segment-phases-magnetite-fix.md  2026-07-04-shlif-web-unified-service.md  2026-07-05-csv-export-batch-processing.md
docs/superpowers/specs/: 2026-07-04-analysis-progress-ui-design.md  2026-07-04-mask-editor-sidebar-design.md  2026-07-04-panorama-closeup-unification-design.md  2026-07-04-panorama-deep-zoom-design.md  (+8 more)
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AnalysisProgress.tsx  DeepZoomViewer.tsx  PanoramaWorkspace.tsx  PanoramaZoomModal.tsx  ThemeToggle.tsx  Welcome.tsx  icons.tsx
frontend/lib/: batchUrl.ts  csv.ts  jobUrl.ts  ore.ts  progress.ts  statusLabels.ts  useZoomPan.ts
frontend/tests/: batchUrl.test.mjs  client.test.mjs  csv.test.mjs  darkpercent.test.mjs  encode.test.mjs  enhance.test.mjs  jobUrl.test.mjs  progress.test.mjs  reducer.test.mjs  superpixel.test.mjs
traefik/: dynamic.yml  traefik.yml
(+14 files in other folders)
