[project]
name = "shlif-web-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "granian>=1.6",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "pillow>=10.3",
    "opencv-python-headless>=4.9",
    "scikit-image>=0.24",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "reportlab>=4.0",
    # cu121 (not the PyPI-default cu13x build): the deploy VM's driver 535 caps out
    # at CUDA 12.2, so a newer default wheel loads but reports cuda False silently.
    # Wheels only exist on download.pytorch.org/whl/cu121 (see Dockerfile).
    "torch==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "segmentation-models-pytorch>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Package only `app` (and its subpackages incl. the vendored `app.shlif`); the
# sibling data/ models/ tests/ dirs must NOT confuse setuptools auto-discovery
# (flat-layout conflict → editable install fails on a clean reinstall / CI).
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
